self-hosted-services/conduit/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: conduit
  namespace: conduit
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: conduit
  ports:
    - name: http
      port: 6167
      targetPort: 6167
